/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 Victor Urena
 */

package ucf.assignments;

import javafx.event.ActionEvent;

public class DisplayAllController {
    public void loadCompleteList(ActionEvent actionEvent) {
    }
    // load all available items within a list

    // if (localStorage.getItem(ToDO) == NULL -> then print no data available
    // else get the ToDos from JSON.Parse.LocalStorage.getitem(ToDo)
    // afterwards ToDo.load (todo)



}
