/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 Victor Urena
 */

package ucf.assignments;

import javafx.event.ActionEvent;

public class DisplayCompletedController {
    public void loadCompletedList(ActionEvent actionEvent) {

        // load completed items within a list

        // if (localStorage.getItem(ToDO) == NULL -> then print no data available
        // else first check through the array of items in the ToDo List
        // Anytime Boolean itemDone == true -> loan the data from Json
        //  get the ToDos from JSON.Parse.LocalStorage.getitem(ToDo)
        // afterwards ToDo.load (todo)
    }
}
